--- a/PCA.Rmd
+++ b/PCA.Rmd
@@ -13,12 +13,9 @@ packages.check <- lapply(requiredPackages, FUN = function(x) {
     library(x, character.only = TRUE)
   }
 })
-
-PROJECT_PATH="C:/Users/david/Documents/GitHub/MultivariantAnalysis_IBMDataset"
-
+PROJECT_PATH="~/Documents/UPC/1Q/MultivariateAnalysis_MVVA/Labs/MultivariantAnalysis_IBMDataset"
 setwd(PROJECT_PATH)
 
-#mixtools, MVN, robustbase, hola
 ```
 
 # 1. Import data
@@ -28,7 +25,6 @@ setwd(PROJECT_PATH)
 load("./Data/df_preprocessed_IBM_Employees.Rdata") 
 load("./Data/df_preprocessed_PCA_IBM_Employees.Rdata") 
 load("./Data/df_preprocessed_MCA_IBM_Employees.Rdata") 
-
 df_PCA <- subset(df_PCA, select = -c(AgeToJubilation))
 df1 <- subset(df_PCA, select = -c(HourlyRate,DailyRate,MonthlyRate))
 ```
@@ -38,35 +34,21 @@ df1 <- subset(df_PCA, select = -c(HourlyRate,DailyRate,MonthlyRate))
 ### 1.1.1 Scree plot
 
 ```{r, echo=TRUE}
-
 pca <- prcomp(df1, scale = TRUE)
 pca$rotation
-
 fviz_eig(pca, addlabels=TRUE, hjust = -0.3) 
-
 prop_varianza <- pca$sdev^2 / sum(pca$sdev^2)
 prop_varianza
 sum(prop_varianza)
-
 prop_varianza_acum <- cumsum(prop_varianza)
 prop_varianza_acum
-
 # Les 4 primeres 59.18 % de la varianxa
-
-
-
-
-
-
-
 df$JobLevel
-
 ```
 
 ### 1.1.2 Choose dimensions
 
 ```{r, echo=FALSE}
-
 decorrelate_dataframe <- function(df){
     
   df_aux <- data.frame(df) 
@@ -77,26 +59,17 @@ decorrelate_dataframe <- function(df){
   }
   return(df_aux)
 }
-
-
-
 #Calculte the original variance
 pca <- prcomp(df1, scale = TRUE)
 original_var <- pca$sdev^2 / sum(pca$sdev^2)
-
-
-
 num_permutations = 10
 df_variance = data.frame(matrix(nrow = num_permutations, ncol = length(colnames(df1)))) 
-
 for (i in c(1:num_permutations))
 {
   df_aux = decorrelate_dataframe(df1)
   pca_aux <- prcomp(df_aux, scale = TRUE)
   df_variance[i,] <- pca_aux$sdev^2 / sum(pca_aux$sdev^2)
 }
-
-
 nrow(df_variance[df_variance$X1 > original_var[1],])/ num_permutations
 nrow(df_variance[df_variance$X2 > original_var[2],])/ num_permutations
 nrow(df_variance[df_variance$X3 > original_var[3],])/ num_permutations
@@ -109,24 +82,18 @@ nrow(df_variance[df_variance$X9 > original_var[9],])/ num_permutations
 nrow(df_variance[df_variance$X10 > original_var[10],])/ num_permutations
 nrow(df_variance[df_variance$X11 > original_var[11],])/ num_permutations
 nrow(df_variance[df_variance$X12 > original_var[12],])/ num_permutations
-
-
 ```
 
 
 ### 1.1.2 PCA1 vs PCA2 plots
 
 ```{r, echo=FALSE}
-
 pca_values <- PCA(df_PCA, scale.unit = TRUE, graph = FALSE)
-
 # Extract the eigenvalues/variances of principal components
 get_eigenvalue(pca_values)
-
 #  Extract the results for individuals and variables, respectively.
 get_pca_ind(pca_values)
 get_pca_var(pca_values)
-
 #Visualize the results individuals and variables, respectively. Clustering by all possible Qualitative Variables to see if some can be explained well for the PCA's
 for (var1 in colnames(df_MCA)) {
   plot(fviz_pca_ind(pca_values, 
@@ -139,11 +106,8 @@ for (var1 in colnames(df_MCA)) {
 }
   
 fviz_pca_var(pca_values)
-
-
 #Make a biplot of individuals and variables.
 fviz_pca_biplot(pca_values)
-
 ```
 
 ## 1.2 All numerical variables minus AgetoJubilation, HourlyRate, DailyRate, MonthlyRate
@@ -151,32 +115,23 @@ fviz_pca_biplot(pca_values)
 ### 1.2.1 Scree plot
 
 ```{r, echo=TRUE}
-
 pca1 <- prcomp(df1, scale = TRUE)
 pca1$rotation
-
 fviz_eig(pca1, addlabels=TRUE, hjust = -0.3) 
-
 prop_varianza1 <- pca1$sdev^2 / sum(pca1$sdev^2)
 prop_varianza1
 sum(prop_varianza1)
-
 prop_varianza_acum1 <- cumsum(prop_varianza1)
 prop_varianza_acum1
-
 # Les 4 primeres 73.49 % de la varianxa
-
 ```
 
 ### 1.1.2 PCA1 vs PCA2 plots
 
 ```{r, echo=FALSE}
-
 pca_values1 <- PCA(df1, scale.unit = TRUE, graph = FALSE)
-
 # Extract the eigenvalues/variances of principal components
 get_eigenvalue(pca_values1)
-
 #Visualize the results individuals and variables, respectively. Clustering by all possible Qualitative Variables to see if some can be explained well for the PCA's
 # for (var1 in colnames(df_MCA)) {
 #   plot(fviz_pca_ind(pca_values1, 
@@ -187,21 +142,18 @@ get_eigenvalue(pca_values1)
 #                     title=var1)
 #        )
 # }
-
 fviz_pca_ind(pca_values1, 
         label="none",
         habillage=df_MCA$JobLevel, 
         addEllipses=TRUE, 
         ellipse.level=0.95,
         title=var1)
-
 fviz_pca_ind(pca_values1, 
         label="none", 
         habillage=df_MCA$MultivariateOutlier,
         addEllipses=TRUE, 
         ellipse.level=0.95,
         title=var1)
-
 fviz_pca_var(pca_values1,axes=c(1,2), col.var="contrib",
              gradient.cols = c("#00AFBB", "#E7B800", "#FC4E07"),
              repel = TRUE # Avoid text overlapping
@@ -226,14 +178,10 @@ fviz_pca_var(pca_values1,axes=c(3,4), col.var="contrib",
              gradient.cols = c("#00AFBB", "#E7B800", "#FC4E07"),
              repel = TRUE # Avoid text overlapping
              )
-
 fviz_contrib(pca_values1, choice = "var", axes = 1, top = 10, repel = TRUE)
 fviz_contrib(pca_values1, choice = "var", axes = 2, top = 10, repel = TRUE)
 fviz_contrib(pca_values1, choice = "var", axes = 3, top = 10, repel = TRUE)
 fviz_contrib(pca_values1, choice = "var", axes = 4, top = 10, repel = TRUE)
-
-
 #Make a biplot of individuals and variables.
 fviz_pca_biplot(pca_values1, col.ind="green", col.var="black", label="var", repel = TRUE)
-
 ```
