--- a/Clustering_Jordi.Rmd
+++ b/Clustering_Jordi.Rmd
@@ -75,6 +75,7 @@ boxplot(df_norm)
 ```
 
 
+#Results from numerical transformed variables
 ```{r, echo=FALSE}
 
 
@@ -87,12 +88,68 @@ df_norm$clust<-as.factor(c2)
 
 colnames(df_norm)
 
+df_norm$Attrition <- df_join$Attrition
+
 ggpairs(df_norm, columns = c(1:4), aes(color = clust, alpha = 0.5),progress = FALSE)
 ggpairs(df_norm, columns = c(5:8), aes(color = clust, alpha = 0.5),progress = FALSE)
 
 pairs(df_norm[,1:8], col=c1)
 
+
 ```
+
+
+
+# 3 add categorical variables
+```{r, echo=FALSE}
+library(cluster)
+
+#Take all the categorical variables into dcategoriques and delete the usless variables
+dcategoriques<-df[sapply(df, is.factor)]
+dcategoriques<-subset(dcategoriques, select = -c(DistanceFromHome,Education, EducationField, JobLevel, JobRole))
+names(dcategoriques)
+
+#join the dcategoriques with the filtered df_norm into a new df ->df_join
+colnames(df_norm)
+
+df_join <- df_norm[,c(1:8)]
+
+for(i in colnames(dcategoriques)){
+  df_join[,i] <- dcategoriques[,i]  
+}
+
+
+#dissimilarity matrix
+dissimMatrix <- daisy(df_join, metric = "gower", stand=TRUE)
+distMatrix<-dissimMatrix^2
+distMatrix
+h1<-hclust(distMatrix,method="ward.D")
+plot(h1) 
+c2<-cutree(h1,2)
+df_join$clust<-as.factor(c2)
+
+# Visualitzations
+boxplot(df_join$Attrition~c2)
+boxplot(df_join$MonthlyIncome~c2, horizontal=TRUE)
+
+colnames(df_join)
+
+ggpairs(df_join, columns = c(1:5), aes(color = clust, alpha = 0.5),progress = FALSE)
+ggpairs(df_join, columns = c(6:10), aes(color = clust, alpha = 0.5),progress = FALSE)
+ggpairs(df_join, columns = c(11:15), aes(color = clust, alpha = 0.5),progress = FALSE)
+ggpairs(df_join, columns = c(16:20), aes(color = clust, alpha = 0.5),progress = FALSE)
+ggpairs(df_join, columns = c(21:24), aes(color = clust, alpha = 0.5),progress = FALSE)
+
+```
+
+
+
+
+
+
+
+
+
 
 
 
