--- a/Clustering_Final/Clustering_attrition.Rmd
+++ b/Clustering_Final/Clustering_attrition.Rmd
@@ -7,31 +7,26 @@ editor_options:
   chunk_output_type: console
 ---
 
-#Import dataset
+## Import dataset
 
 ```{r, echo=FALSE}
 library(caret)
 library(GGally)
 library(cluster)
 library(FactoMineR)
-library(plyr)
-library(psych)
 
 load("./Data/df_preprocessed_IBM_Employees.Rdata") 
 names(df) 
 df0<-df
 ```
 
-# 0 - Get relevant columns
+## 0 - Get relevant columns
 
 ```{r}
 catdes(df, num.var=2, proba=0.01)
 
 # Relevant p-values
-df<-subset(df, select = c(OverTime,JobLevel,StockOptionLevel, MaritalStatus, JobRole, JobInvolvement,EnvironmentSatisfaction, JobSatisfaction,SalaryHikePerYear,TotalWorkingYears,YearsInCurrentRole,MonthlyIncome,Age,YearsWithCurrManager,AverageYearsCompany,YearsAtCompany))
-
-#JobInvolvement,EnvironmentSatisfaction, JobSatisfaction, MaritalStatus,StockOptionLevel
-#df<-subset(df, select = c(OverTime,JobLevel, JobRole,SalaryHikePerYear,TotalWorkingYears,YearsInCurrentRole,MonthlyIncome,Age,YearsWithCurrManager,AverageYearsCompany,YearsAtCompany))
+df<-subset(df, select = c(OverTime,JobLevel,StockOptionLevel,MaritalStatus,JobRole,JobInvolvement,EnvironmentSatisfaction,JobSatisfaction,SalaryHikePerYear,TotalWorkingYears,YearsInCurrentRole,MonthlyIncome,Age,YearsWithCurrManager,AverageYearsCompany,YearsAtCompany))
 
 ```
 
@@ -49,7 +44,7 @@ lapply(X=colnames(dcon), FUN=function(s){
 })
 
 hist(log(dcon$SalaryHikePerYear))
-df_trans$SalaryHikePerYear <- log(dcon$SalaryHikePerYear+1)
+df_trans$SalaryHikePerYear <- log(dcon$SalaryHikePerYear+0.5)
 
 hist(log(dcon$TotalWorkingYears))
 df_trans$TotalWorkingYears <- log(dcon$TotalWorkingYears+0.5)
@@ -78,11 +73,12 @@ for (colname in colnames(dcon)) {
   df_norm[,colname]<-range01(df_norm[,colname])
 }
 
-boxplot(df_norm[,c(1:8)])
+boxplot(dcon)
+boxplot(df_norm)
 
 ```
 
-# 2 - Add categorical variables to final Dataframe
+## 2 - Add categorical variables to final Dataframe
 
 ```{r, echo=FALSE}
 
@@ -95,7 +91,7 @@ boxplot(df_norm)
 
 ```
 
-# 3 - Clustering
+## 3 - Clustering
 
 ```{r, echo=FALSE}
 
@@ -107,48 +103,245 @@ h1<-hclust(distMatrix,method="ward.D")
 options(max.print=2000)
 options(scipen=999)
 h1$height
-plot(h1) 
-# For first subset
-rect.hclust(h1, h=8.97556177712,border="green") # 6 clusters
-rect.hclust(h1, h=17.29880121544,border="red") # 3 clusters
-rect.hclust(h1, h=21.59377395634,border="blue") # 3 clusters
+plot(h1, main="Cluster Dendrogram for Attrition") 
+rect.hclust(h1, h=14.42488943150,border="red") # 4 clusters
+rect.hclust(h1, h=23.75887765291,border="blue") # 3 clusters
 
-# For second subset
-#rect.hclust(h1, h=11.74583336365,border="green") # 5 clusters
-#rect.hclust(h1, h=20.86606866385,border="red") # 4 clusters
-#rect.hclust(h1, h=25.64470082455,border="blue") # 2 clusters
-
-
-c1<-cutree(h1,2)
-df$cluster<-c1
-
-cdg <- aggregate(as.data.frame(df_norm),list(c1),mean) 
-cdg
+# Add target variable to check results
 
 df_norm$Attrition<-df0$Attrition
 
-c2<-cutree(h1,2)
-df_norm$clust<-as.factor(c2)
-table(df_norm$Attrition,df_norm$clust)
-#plot results
-ggpairs(df_norm, columns = c(1:4), aes(color = clust, alpha = 0.5),progress = FALSE)
-ggpairs(df_norm, columns = c(5:8), aes(color = clust, alpha = 0.5),progress = FALSE)
-ggpairs(df_norm, columns = c(9:13), aes(color = clust, alpha = 0.5),progress = FALSE)
+```
 
-c2<-cutree(h1,3)
-df_norm$clust<-as.factor(c2)
-table(df_norm$Attrition,df_norm$clust)
-#plot results
-ggpairs(df_norm, columns = c(1:4), aes(color = clust, alpha = 0.5),progress = FALSE)
-ggpairs(df_norm, columns = c(5:8), aes(color = clust, alpha = 0.5),progress = FALSE)
-ggpairs(df_norm, columns = c(9:13), aes(color = clust, alpha = 0.5),progress = FALSE)
+## 4 - Profiling
 
-c2<-cutree(h1,6)
-df_norm$clust<-as.factor(c2)
-table(df_norm$Attrition,df_norm$clust)
+### 4.1 - 3 clusters
+
+```{r, echo=FALSE}
+
+df_norm$clust<-as.factor(cutree(h1,3))
+ggplot(df_norm, aes(x= Attrition,  group=clust)) + 
+    geom_bar(aes(y = ..prop.., fill = factor(..x..,labels = c("No", "Yes"))), stat="count") +
+    geom_text(aes( label = scales::percent(..prop..),
+                   y= ..prop.. ), stat= "count", vjust = -.5) +
+    labs(y = "Percent", fill="Attrition") +
+    facet_grid(~clust) +
+    scale_y_continuous(labels = scales::percent)
+
 #plot results
-ggpairs(df_norm, columns = c(1:4), aes(color = clust, alpha = 0.5),progress = FALSE)
-ggpairs(df_norm, columns = c(5:8), aes(color = clust, alpha = 0.5),progress = FALSE)
-ggpairs(df_norm, columns = c(9:13), aes(color = clust, alpha = 0.5),progress = FALSE)
+ggpairs(df_norm, columns=c(1:4), aes(color = clust, alpha = 0.5),progress = FALSE)
+ggpairs(df_norm, columns=c(5:8), aes(color = clust, alpha = 0.5),progress = FALSE)
+ggpairs(df_norm, columns=c(9:12), aes(color = clust, alpha = 0.5),progress = FALSE)
+ggpairs(df_norm, columns=c(13:16), aes(color = clust, alpha = 0.5),progress = FALSE)
+
+```
+
+### 4.2 - 4 clusters
+
+```{r, echo=FALSE}
+
+df_norm$clust<-as.factor(cutree(h1,4))
+
+ggplot(df_norm, aes(x= Attrition,  group=clust)) + 
+    geom_bar(aes(y = ..prop.., fill = factor(..x..,labels = c("No", "Yes"))), stat="count") +
+    geom_text(aes( label = scales::percent(..prop..),
+                   y= ..prop.. ), stat= "count", vjust = -.5) +
+    labs(y = "Percent", fill="Attrition") +
+    facet_grid(~clust) +
+    scale_y_continuous(labels = scales::percent)
+
+#plot results
+ggpairs(df_norm, columns=c(1:4), aes(color = clust, alpha = 0.5),progress = FALSE)
+ggpairs(df_norm, columns=c(5:8), aes(color = clust, alpha = 0.5),progress = FALSE)
+ggpairs(df_norm, columns=c(9:12), aes(color = clust, alpha = 0.5),progress = FALSE)
+ggpairs(df_norm, columns=c(13:16), aes(color = clust, alpha = 0.5),progress = FALSE)
+
+```
+
+### 4.3 - Profiling David
+
+```{r, echo=FALSE}
+
+df$Attrition<-df0$Attrition
+
+ValorTestXnum <- function(Xnum,P){
+  nk <- as.vector(table(P)); 
+  n <- sum(nk); 
+
+  xk <- tapply(Xnum,P,mean);
+  txk <- (xk-mean(Xnum))/(sd(Xnum)*sqrt((n-nk)/(n*nk))); 
+  
+  #p-values
+  pxk <- pt(txk,n-1,lower.tail=F);
+  for(c in 1:length(levels(as.factor(P)))){if (pxk[c]>0.5){pxk[c]<-1-pxk[c]}}
+  return (pxk)
+}
+
+ValorTestXquali <- function(P,Xquali){
+  taula <- table(P,Xquali);
+  n <- sum(taula); 
+  pk <- apply(taula,1,sum)/n;
+  pj <- apply(taula,2,sum)/n;
+  pf <- taula/(n*pk);
+  pjm <- matrix(data=pj,nrow=dim(pf)[1],ncol=dim(pf)[2], byrow=TRUE);      
+  dpf <- pf - pjm; 
+  dvt <- sqrt(((1-pk)/(n*pk))%*%t(pj*(1-pj))); 
+  #i hi ha divisions iguals a 0 dona NA i no funciona
+  zkj <- dpf
+  zkj[dpf!=0]<-dpf[dpf!=0]/dvt[dpf!=0]; 
+  pzkj <- pnorm(zkj,lower.tail=F);
+  for(c in 1:length(levels(as.factor(P)))){for (s in 1:length(levels(Xquali))){if (pzkj[c,s]> 0.5){pzkj[c,s]<-1- pzkj[c,s]}}}
+  return (list(rowpf=pf,vtest=zkj,pval=pzkj))
+}
+
+dades<-df
+K<-dim(dades)[2]
+par(ask=TRUE)
+
+
+#P must contain the class variable
+P<-dades[,17]
+nameP<-"Attrition"
+#P<-df[,33]
+
+nc<-length(levels(factor(P)))
+pvalk <- matrix(data=0,nrow=nc,ncol=K, dimnames=list(levels(P),names(dades)))
+nameP<-"Attrition"
+n<-dim(dades)[1]
+
+for(k in 1:K){
+  if (is.numeric(dades[,k])){ 
+    print(paste("Anàlisi per classes de la Variable:", names(dades)[k]))
+    
+    boxplot(dades[,k]~P, main=paste("Boxplot of", names(dades)[k], "vs", nameP ), horizontal=TRUE)
+    
+    barplot(tapply(dades[[k]], P, mean),main=paste("Means of", names(dades)[k], "by", nameP ))
+    abline(h=mean(dades[[k]]))
+    legend(0,mean(dades[[k]]),"global mean",bty="n")
+    print("Estadístics per groups:")
+    for(s in levels(as.factor(P))) {print(summary(dades[P==s,k]))}
+    o<-oneway.test(dades[,k]~P)
+    print(paste("p-valueANOVA:", o$p.value))
+    kw<-kruskal.test(dades[,k]~P)
+    print(paste("p-value Kruskal-Wallis:", kw$p.value))
+    pvalk[,k]<-ValorTestXnum(dades[,k], P)
+    print("p-values ValorsTest: ")
+    print(pvalk[,k])      
+  }else{
+    if(class(dd[,k])=="Date"){
+      print(summary(dd[,k]))
+      print(sd(dd[,k]))
+      #decide breaks: weeks, months, quarters...
+      hist(dd[,k],breaks="weeks")
+    }else{
+      #qualitatives
+      print(paste("Variable", names(dades)[k]))
+      table<-table(P,dades[,k])
+      #   print("Cross-table")
+      #   print(table)
+      rowperc<-prop.table(table,1)
+      
+      colperc<-prop.table(table,2)
+      #  print("Distribucions condicionades a files")
+      # print(rowperc)
+      
+      #ojo porque si la variable es true o false la identifica amb el tipus Logical i
+      #aquest no te levels, por tanto, coertion preventiva
+      
+      dades[,k]<-as.factor(dades[,k])
+      
+      
+      marg <- table(as.factor(P))/n
+      print(append("Categories=",levels(as.factor(dades[,k]))))
+      
+      #from next plots, select one of them according to your practical case
+      plot(marg,type="l",ylim=c(0,1),main=paste("Prop. of pos & neg by",names(dades)[k]))
+      paleta<-rainbow(length(levels(dades[,k])))
+      for(c in 1:length(levels(dades[,k]))){lines(colperc[,c],col=paleta[c]) }
+      
+      #with legend
+      plot(marg,type="l",ylim=c(0,1),main=paste("Prop. of pos & neg by",names(dades)[k]))
+      paleta<-rainbow(length(levels(dades[,k])))
+      for(c in 1:length(levels(dades[,k]))){lines(colperc[,c],col=paleta[c]) }
+      legend("topright", levels(dades[,k]), col=paleta, lty=2, cex=0.6)
+      
+      #condicionades a classes
+      print(append("Categories=",levels(dades[,k])))
+      plot(marg,type="n",ylim=c(0,1),main=paste("Prop. of pos & neg by",names(dades)[k]))
+      paleta<-rainbow(length(levels(dades[,k])))
+      for(c in 1:length(levels(dades[,k]))){lines(rowperc[,c],col=paleta[c]) }
+      
+      #with legend
+      plot(marg,type="n",ylim=c(0,1),main=paste("Prop. of pos & neg by",names(dades)[k]))
+      paleta<-rainbow(length(levels(dades[,k])))
+      for(c in 1:length(levels(dades[,k]))){lines(rowperc[,c],col=paleta[c]) }
+      legend("topright", levels(dades[,k]), col=paleta, lty=2, cex=0.6)
+      
+      #amb variable en eix d'abcisses
+      marg <-table(dades[,k])/n
+      print(append("Categories=",levels(dades[,k])))
+      plot(marg,type="l",ylim=c(0,1),main=paste("Prop. of pos & neg by",names(dades)[k]), las=3)
+      #x<-plot(marg,type="l",ylim=c(0,1),main=paste("Prop. of pos & neg by",names(dades)[k]), xaxt="n")
+      #text(x=x+.25, y=-1, adj=1, levels(CountryName), xpd=TRUE, srt=25, cex=0.7)
+      paleta<-rainbow(length(levels(as.factor(P))))
+      for(c in 1:length(levels(as.factor(P)))){lines(rowperc[c,],col=paleta[c]) }
+      
+      #with legend
+      plot(marg,type="l",ylim=c(0,1),main=paste("Prop. of pos & neg by",names(dades)[k]), las=3)
+      for(c in 1:length(levels(as.factor(P)))){lines(rowperc[c,],col=paleta[c])}
+      legend("topright", levels(as.factor(P)), col=paleta, lty=2, cex=0.6)
+      
+      #condicionades a columna 
+      plot(marg,type="n",ylim=c(0,1),main=paste("Prop. of pos & neg by",names(dades)[k]), las=3)
+      paleta<-rainbow(length(levels(as.factor(P))))
+      for(c in 1:length(levels(as.factor(P)))){lines(colperc[c,],col=paleta[c]) }
+      
+      #with legend
+      plot(marg,type="n",ylim=c(0,1),main=paste("Prop. of pos & neg by",names(dades)[k]), las=3)
+      for(c in 1:length(levels(as.factor(P)))){lines(colperc[c,],col=paleta[c])}
+      legend("topright", levels(as.factor(P)), col=paleta, lty=2, cex=0.6)
+      
+      table<-table(dades[,k],P)
+      print("Cross Table:")
+      print(table)
+      print("Distribucions condicionades a columnes:")
+      print(colperc)
+      
+      #diagrames de barres apilades                                         
+      
+      paleta<-rainbow(length(levels(dades[,k])))
+      barplot(table(dades[,k], as.factor(P)), beside=FALSE,col=paleta )
+      
+      barplot(table(dades[,k], as.factor(P)), beside=FALSE,col=paleta )
+      legend("topright",levels(as.factor(dades[,k])),pch=1,cex=0.5, col=paleta)
+      
+      #diagrames de barres adosades
+      barplot(table(dades[,k], as.factor(P)), beside=TRUE,col=paleta )
+      
+      barplot(table(dades[,k], as.factor(P)), beside=TRUE,col=paleta)
+      legend("topright",levels(as.factor(dades[,k])),pch=1,cex=0.5, col=paleta)
+      
+      print("Test Chi quadrat: ")
+      print(chisq.test(dades[,k], as.factor(P)))
+      
+      print("valorsTest:")
+      print( ValorTestXquali(P,dades[,k]))
+      #calcular els pvalues de les quali
+    }
+  }
+}#endfor
+
+#descriptors de les classes més significatius. Afegir info qualits
+for (c in 1:length(levels(as.factor(P)))) {
+  if(!is.na(levels(as.factor(P))[c])){
+    print(paste("P.values per class:",levels(as.factor(P))[c]));
+    print(sort(pvalk[c,]), digits=3) 
+  }
+}
+
+#afegir la informacio de les modalitats de les qualitatives a la llista de pvalues i fer ordenacio global
+
+#saving the dataframe in an external file
+#write.table(dd, file = "credscoClean.csv", sep = ";", na = "NA", dec = ".", row.names = FALSE, col.names = TRUE)
 
 ```
